# zero2prod

./: .env  Cargo.toml  Dockerfile  LICENSE  README.md  configuration.yaml  pgsql.sql
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  idempotency.rs  issue_delivery_worker.rs  lib.rs  main.rs  route.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/idempotency/key/: IdempotencyKey.rs
src/route/: admin.rs  health_check.rs  home.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/route/admin/: dashboard.rs  logout.rs
src/route/admin/newsletter/: get.rs  post.rs
src/route/admin/password/: get.rs  post.rs
src/route/home/: login.rs
src/route/home/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
