[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"

# 注意双方括号：它是 TOML 语法中的数组。
# 一个项目中只能有一个库，但我们可以有多个二进制文件！
# 如果您想管理同一仓库中的多个库 # 看看工作区功能 - 我们稍后会介绍。
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.8.0"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.204", features = ["derive"] }
serde-aux = "4.5.0"
config = "0.11.0"
uuid = { version = "1.10.0", features = ["v4"] }
chrono = "0.4.38"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.11"
once_cell = "1.19.0"
secrecy = { version = "0.8.0", features = ["serde"] }
unicode-segmentation = "1.11.0"
claim = "0.5.0"
validator = "0.14.0"

[dependencies.sqlx]
version = "0.8.0"
default-features = false
features = [
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

# 开发依赖项专门用于运行测试或示例
# 它们不会包含在最终的应用程序二进制文件中！
[dev-dependencies]
reqwest = "0.12.5"
fake = "2.9.2"






